some deprecation cleanup